# ogs6_fork_from_nw

./: CMakeLists.txt
MathLib/: CMakeLists.txt
MathLib/PETSC/: PETScLinearSolver.cpp
SimpleTests/FEMTests/: CMakeLists.txt  FEMTests.cpp
SimpleTests/FEMTests/Example/: test.msh  test.num
scripts/cmake/: Find.cmake
